Fix centering, overflow, scroll, ellipsis, clearfix #245 (#251, #256)

--- a/src/scss/configs/variables/_option.scss
+++ b/src/scss/configs/variables/_option.scss
@@ -82,3 +82,8 @@ $option-add-style-space-way: true !default;
 $option-add-style-margin-important: false !default;
 $option-add-style-margin-minus: true !default;
 $option-add-style-padding-important: false !default;
+$option-add-style-centering-important: false !default;
+$option-add-style-overflow-important: false !default;
+$option-add-style-scroll-important: false !default;
+$option-add-style-ellipsis-important: false !default;
+$option-add-style-clearfix-important: false !default;
